feat: find by id of conversation
