# src/docs/swagger-output.json
@@ -121,6 +121,34 @@
         ]
       }
     },
+    "/conversation/{id}": {
+      "get": {
+        "tags": [
+          "Conversation"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/message": {
       "post": {
         "tags": [
